--- a/src/templates/auth/login_user.html
+++ b/src/templates/auth/login_user.html
@@ -1,54 +1,69 @@
-{% extends './base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}Login{% endblock %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <!--BOOTSTRAP-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-{% block customCSS%}
-<link rel="stylesheet" href="{{url_for('static', filename = 'css/login_user.css')}}">
+  <!--CSS-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{url_for('static', filename = 'css/login_user.css')}}">
+</head>
 
-{% endblock %}
 
-{% block body %}
-<div class="content">
-  <form class="form-signin" action="/login" method="POST">
-    <div class="form-msg">
-      <h1>ADOGCION</h1>
-    </div>
-    {% with messages = get_flashed_messages() %}
+<body>
+  <div class="content">
+    <form class="form-signin" action="/login" method="POST">
+      <div class="form-msg">
+        <h1>ADOGCION</h1>
+      </div>
+      {% with messages = get_flashed_messages() %}
       {% if messages %}
-        <br>
-        {% for message in messages %}
-        <div class = "alert alert-primary alert-dismissible" role = "alert">
-          <strong>{{ message }}</strong>
-          <button class="btn-close" data-bs-dismiss="alert" aria-label = "Close"></button>
-        </div>
-        {% endfor %}
+      <br>
+      {% for message in messages %}
+      <div class="alert alert-primary alert-dismissible" role="alert">
+        <strong>{{ message }}</strong>
+        <button class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
       {% endif %}
-    {% endwith%}
+      {% endwith%}
 
-    <div class="form-floating">
-      <input type="email" class="form-control" name="email" placeholder="nombre@ejemplo.com" value="willy_192002@gmail.com">
-      <label for="floatingInput">Dirección de correo electronico</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" name="password" placeholder="contraseña" value="123Lapopo">
-      <label for="floatingPassword">Contraseña</label>
-    </div>
+      <div class="form-floating">
+        <input type="email" class="form-control" name="email" placeholder="nombre@ejemplo.com"
+          value="willy_192002@gmail.com">
+        <label for="floatingInput">Dirección de correo electronico</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" name="password" placeholder="contraseña" value="123Lapopo">
+        <label for="floatingPassword">Contraseña</label>
+      </div>
 
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Mantener sesión abierta
-      </label>
-    </div>
-    <button class="btn btn-personalized w-100 py-2" type="submit">Acceder</button>
-  </form>
-  <div class = "reg_option">
-    <h3>¿No tienes cuenta? 
-      <a href="/register" class="href-personalized">
-        <strong>Registrate aqui</strong></h3>
+      <div class="form-check text-start my-3">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Mantener sesión abierta
+        </label>
+      </div>
+      <button class="btn btn-personalized w-100 py-2" type="submit">Acceder</button>
+    </form>
+    <div class="reg_option">
+      <h3>¿No tienes cuenta?
+        <a href="/register" class="href-personalized">
+          <strong>Registrate aqui</strong>
+      </h3>
       </a>
-    <h3>O puedes <a href="/home" class="href-personalized"><strong>Volver</strong></a></h3>
+      <h3>O puedes <a href="/home" class="href-personalized"><strong>Volver</strong></a></h3>
+    </div>
   </div>
-</div>
-
-{% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+</html>
