Commit_019: Agregado Lateral Base

--- a/src/templates/auth/login_user.html
+++ b/src/templates/auth/login_user.html
@@ -55,7 +55,7 @@
     </form>
     <div class="reg_option">
       <h3>¿No tienes cuenta?
-        <a href="/register" class="href-personalized">
+        <a href="/register/adoption_center" class="href-personalized">
           <strong>Registrate aqui</strong>
       </h3>
       </a>
