--- a/src/templates/Adoption_Center_User/post/home_adoption_center.html
+++ b/src/templates/Adoption_Center_User/post/home_adoption_center.html
@@ -1,4 +1,4 @@
-{% extends './src/templates/Adoption_Center_User/lateral_base.html' %}
+{% extends 'Adoption_Center_User/lateral_base.html' %}
 
 {% block title %}Mis animales{% endblock %}
 
