--- a/src/templates/Adoption_Center_User/post/home_adoption_center.html
+++ b/src/templates/Adoption_Center_User/post/home_adoption_center.html
@@ -1,4 +1,4 @@
-{% extends 'Adoption_Center_User/lateral_base.html' %}
+{% extends 'lateral_base.html' %}
 
 {% block title %}Mis animales{% endblock %}
 
@@ -6,6 +6,68 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href={{url_for('static', filename='css/User_Adoption_Center/home_adoption_center.css' )}} />
 {% endblock %}
+
+{%block items%}
+{% if current_user.is_authenticated %}
+          <li class="item">
+            <a href="#"
+              class="link flex">
+              <i class="bx bxs-user"></i>
+              <span>Perfil</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-home-heart"></i>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-dog"></i>
+              <span>Mis animales</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#"
+              class="link flex">
+              <i class="bx bxs-cloud-upload"></i>
+              <span>Publicar</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-log-out"></i>
+              <span>Cerrar Sesión</span>
+            </a>
+          </li>
+          {% else %}
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bx-user"></i>
+              <span>Inicia Sesión</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-pencil"></i>
+              <span>Registrate</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-home-heart"></i>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex" data-bs-toggle="modal" data-bs-target="#ModalRequest">
+              <i class="bx bxs-cloud-upload"></i>
+              <span>Publicar</span>
+            </a>
+          </li>
+          {% endif %}
+{%endblock%}
 
 {% block body %}
 
@@ -39,7 +101,7 @@
             <select id="selectCategorias" class="form-select" aria-label="Filtrar por categoria" name="filtroCategoria">
               <option selected disabled>Categoria</option>
               {%for category in categories %}
-              <option value={{categoria.id}}>{{category.name}}</option>
+              <option value={{category.id}}>{{category.name}}</option>
               {% endfor %}
             </select>
           </div>
@@ -71,20 +133,19 @@
         </button>
       </div> -->
       <div class="col col-md-4 d-grid gap-2">
-        <a class="btn btn-personalized" href="/home/adoption_center">
+        <a class="btn btn-personalized" href="#">
           <i class='bx bxs-home-heart'></i> Fundaciones
         </a>
       </div>
       <div class="col col-md-4 d-grid gap-2">
-        <a class="btn btn-personalized" href=/home/community>
+        <a class="btn btn-personalized" href="#">
           <i class='bx bxs-book-heart'></i> Comunidad
         </a>
       </div>
     </div>
   </div>
-
+{%if publications%}
   <div class="contenedorHistorialPubs">
-    {%if publications%}
     {% for publication in publications%}
     <div class="contenedorHistorias">
       <div class="encabezadoHistoria">
@@ -113,9 +174,8 @@
 
     </div>
     {% endfor %}
-    {%endif%}
   </div>
-
+{%endif%}
 </div>
 
 {% endblock %}
