--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -18,8 +18,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href={{url_for('static', filename='css/lateral_base.css' )}} />
   {% block customCSS%}
+  
   {% endblock %}
 </head>
 
@@ -32,71 +33,16 @@
     <div class="menu_container">
       <div class="menu_items">
         <ul class="menu_item">
-          {% if current_user.is_authenticated %}
-          <li class="item">
-            <a href="#"
-              class="link flex">
-              <i class="bx bxs-user"></i>
-              <span>Perfil</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-home-heart"></i>
-              <span>Inicio</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-dog"></i>
-              <span>Mis animales</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#"
-              class="link flex">
-              <i class="bx bxs-cloud-upload"></i>
-              <span>Publicar</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="/logout" class="link flex">
-              <i class="bx bxs-log-out"></i>
-              <span>Cerrar Sesión</span>
-            </a>
-          </li>
-          {% else %}
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bx-user"></i>
-              <span>Inicia Sesión</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-pencil"></i>
-              <span>Registrate</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-home-heart"></i>
-              <span>Inicio</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex" data-bs-toggle="modal" data-bs-target="#ModalRequest">
-              <i class="bx bxs-cloud-upload"></i>
-              <span>Publicar</span>
-            </a>
-          </li>
-          {% endif %}
+          {%block items%}
+          {%endblock%}
         </ul>
       </div>
     </div>
   </nav>
-  {% block body %}
-  {% endblock %}
+{% block body %}
+{% endblock %}
+
+
 
   <form action='/home' method="POST" id="createPublication">
     <!--Primer Modal, solicitud información-->
@@ -224,6 +170,7 @@
       </div>
     </div>
   </form>
+
   {% block modal %}
   {% endblock %}
 
