--- a/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
+++ b/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href={{url_for('static', filename='css/User_Adoption_Center/lateral_base.css' )}} />
+  <link rel="stylesheet" href={{url_for('static', filename='css/User_Adoption_Center/lateral_base_adoptionC.css' )}} />
 
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href={{url_for('static', filename='css/lateral_base.css' )}} />
+  <link rel="stylesheet" href={{url_for('static', filename='css/lateral_base_adoptionC.css' )}} />
   {% block customCSS%}
   
   {% endblock %}
@@ -33,8 +33,65 @@
     <div class="menu_container">
       <div class="menu_items">
         <ul class="menu_item">
-          {%block items%}
-          {%endblock%}
+          {% if current_user.is_authenticated %}
+          <li class="item">
+            <a href="#"
+              class="link flex">
+              <i class="bx bxs-user"></i>
+              <span>Perfil</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-home-heart"></i>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-dog"></i>
+              <span>Mis animales</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#"
+              class="link flex">
+              <i class="bx bxs-cloud-upload"></i>
+              <span>Publicar</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-log-out"></i>
+              <span>Cerrar Sesión</span>
+            </a>
+          </li>
+          {% else %}
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bx-user"></i>
+              <span>Inicia Sesión</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-pencil"></i>
+              <span>Registrate</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex">
+              <i class="bx bxs-home-heart"></i>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#" class="link flex" data-bs-toggle="modal" data-bs-target="#ModalRequest">
+              <i class="bx bxs-cloud-upload"></i>
+              <span>Publicar</span>
+            </a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -180,7 +237,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/static/js/User_Adoption_Center/lateral_base.js"></script>
+  <script src="/static/js/lateral_base_adoptionC.js"></script>
   {% block customJS%}
   {% endblock %}
 
