--- a/src/templates/User_Adoption_Center/post/home_adoption_center.html
+++ b/src/templates/User_Adoption_Center/post/home_adoption_center.html
@@ -1,4 +1,4 @@
-{% extends 'lateral_base.html' %}
+{% extends 'User_Adoption_Center/lateral_base_adoptionC.html' %}
 
 {% block title %}Mis animales{% endblock %}
 
@@ -7,67 +7,6 @@
 <link rel="stylesheet" href={{url_for('static', filename='css/User_Adoption_Center/home_adoption_center.css' )}} />
 {% endblock %}
 
-{%block items%}
-{% if current_user.is_authenticated %}
-          <li class="item">
-            <a href="#"
-              class="link flex">
-              <i class="bx bxs-user"></i>
-              <span>Perfil</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-home-heart"></i>
-              <span>Inicio</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-dog"></i>
-              <span>Mis animales</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#"
-              class="link flex">
-              <i class="bx bxs-cloud-upload"></i>
-              <span>Publicar</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-log-out"></i>
-              <span>Cerrar Sesión</span>
-            </a>
-          </li>
-          {% else %}
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bx-user"></i>
-              <span>Inicia Sesión</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-pencil"></i>
-              <span>Registrate</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex">
-              <i class="bx bxs-home-heart"></i>
-              <span>Inicio</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#" class="link flex" data-bs-toggle="modal" data-bs-target="#ModalRequest">
-              <i class="bx bxs-cloud-upload"></i>
-              <span>Publicar</span>
-            </a>
-          </li>
-          {% endif %}
-{%endblock%}
 
 {% block body %}
 
