Commit_028: Agregado template register user

--- a/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
+++ b/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
@@ -68,12 +68,12 @@
           </li>
           {% else %}
           <li class="item">
-            <a href="#" class="link flex">
+            <a href="/login" class="link flex">
               <i class="bx bx-user"></i>
               <span>Inicia Sesión</span>
             </a>
           </li>
-          <li class="item">
+          <li class="">
             <a href="#" class="link flex">
               <i class="bx bxs-pencil"></i>
               <span>Registrate</span>
