Commit_030: Agregado template, ruta y css de register

--- a/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
+++ b/src/templates/User_Adoption_Center/lateral_base_adoptionC.html
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="item">
-            <a href="#" class="link flex">
+            <a href="/logout" class="link flex">
               <i class="bx bxs-log-out"></i>
               <span>Cerrar Sesión</span>
             </a>
@@ -74,13 +74,13 @@
             </a>
           </li>
           <li class="">
-            <a href="#" class="link flex">
+            <a href="/register" class="link flex">
               <i class="bx bxs-pencil"></i>
               <span>Registrate</span>
             </a>
           </li>
           <li class="item">
-            <a href="#" class="link flex">
+            <a href="/home/adoption_center" class="link flex">
               <i class="bx bxs-home-heart"></i>
               <span>Inicio</span>
             </a>
