--- a/src/templates/auth/login_user.html
+++ b/src/templates/auth/login_user.html
@@ -55,11 +55,11 @@
     </form>
     <div class="reg_option">
       <h3>¿No tienes cuenta?
-        <a href="/register/adoption_center" class="href-personalized">
+        <a href="/register" class="href-personalized">
           <strong>Registrate aqui</strong>
       </h3>
       </a>
-      <h3>O puedes <a href="/home" class="href-personalized"><strong>Volver</strong></a></h3>
+      <h3>O puedes <a href="/home/adoption_center" class="href-personalized"><strong>Volver</strong></a></h3>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
