--- a/src/templates/auth/register_user.html
+++ b/src/templates/auth/register_user.html
@@ -27,13 +27,13 @@
       </div>
       <div class="container_user_register">
         <div class="container_user_type">
-          <a class="btn btn-personalized" href="#">
-            <i class='bx bxs-home-heart'></i> Fundaciones
+          <a class="btn btn-personalized" href="/register/adoption_center">
+            Soy un centro de adopcion
           </a>
         </div>
         <div class="container_user_type">
-          <a class="btn btn-personalized" href="#">
-            <i class='bx bxs-book-heart'></i> Comunidad
+          <a class="btn btn-personalized" href="/register/natural_person">
+            Soy una persona natural
           </a>
         </div>
       </div>
