Commit_031: Reajuste lateral base

--- a/src/templates/User_Adoption_Center/post/home.html
+++ b/src/templates/User_Adoption_Center/post/home.html
@@ -1,4 +1,4 @@
-{% extends 'User_Adoption_Center/lateral_base_adoptionC.html' %}
+{% extends 'lateral_base.html' %}
 
 {% block title %}Mis animales{% endblock %}
 
