--- a/src/templates/auth/register_natural_person.html
+++ b/src/templates/auth/register_natural_person.html
@@ -192,7 +192,7 @@
         <strong>Inicia sesion aqui</strong>
     </h3>
     </a>
-    <h3>O puedes volver al<a href="/home" class="href-personalized"><strong> inicio</strong></a></h3>
+    <h3>O puedes volver al<a href="/home/adoption_center" class="href-personalized"><strong> inicio</strong></a></h3>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
