--- a/src/templates/auth/register_user.html
+++ b/src/templates/auth/register_user.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bienvenido</title>
   <!-- CSS -->
-  <link rel="stylesheet" href="{{url_for('static', filename = 'css/register_user.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename = 'css/auth/register_user.css')}}">
 </head>
 <body>
   <div class="principal_container">
