--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block customCSS %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href={{url_for('static', filename='css/User_Adoption_Center/home_adoption_center.css' )}} />
+<link rel="stylesheet" href={{url_for('static', filename='css/home.css' )}} />
 {% endblock %}
 
 
