--- a/src/templates/auth/register_natural_person.html
+++ b/src/templates/auth/register_natural_person.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{url_for('static', filename = 'css/register_adoption_center.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename = 'css/auth/register_adoption_center.css')}}">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="step">
-        <p>Datos albergue</p>
+        <p>Datos de registro</p>
         <div class="num">
           <span>2</span>
         </div>
@@ -199,5 +199,5 @@
     crossorigin="anonymous"></script>
 </body>
 
-<script src="/static/js/register_natural_person.js"></script>
+<script src="/static/js/auth/register_natural_person.js"></script>
 </html>
