--- a/src/templates/User_Adoption_Center/profile_adoption_center.html
+++ b/src/templates/User_Adoption_Center/profile_adoption_center.html
@@ -1,5 +1,10 @@
 {% extends 'lateral_base.html' %}
 
+
+{% block title %}
+Perfil
+{% endblock %}
+
 {% block customCSS%}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{url_for('static', filename = 'css/User_Adoption_Center/profile_adoption_center.css')}}">
@@ -10,7 +15,7 @@
 <!-- unitest, nosetest -->
 {% block body %}
 <div class="contenedor">
-  <form class="contPrincipal" action="#" method="POST">
+  <form class="contPrincipal" action="/view/profile={{current_user.get_id()}}/adoption_center={{current_user.name}}" method="POST">
     <!-- Seccion 1 -->
     <div class="seccion1">
       <input type="hidden" name="form_id" value="edit_info">
