--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="#" class="link flex">
+              <a href="/home/adoption_center/" class="link flex">
                 <i class="bx bxs-home-heart"></i>
                 <span>Inicio</span>
               </a>
