Commit_038: Agregado template no authorized, y correcciones en profile adoption center

--- a/src/templates/User_Adoption_Center/profile_adoption_center.html
+++ b/src/templates/User_Adoption_Center/profile_adoption_center.html
@@ -144,7 +144,7 @@ Perfil
       {% for category in categories %}
         <div class="pestana">
           <a class="href-personalized" href="#">
-            <strong>{{category.nombre}}</strong>
+            <strong>{{category.name}}</strong>
           </a>
         </div>
       {% endfor %}
