--- a/src/templates/User_Adoption_Center/post/edit_profile.html
+++ b/src/templates/User_Adoption_Center/post/edit_profile.html
@@ -12,7 +12,7 @@ Editar perfil
 
 {% block body %}
 <div class="contenedor">
-  <form class="contPrincipal" action="/edit_information/profile={{current_user.get_id()}}/adoption_center={{current_user.name}}"
+  <form class="contPrincipal" action="/edit_information/profile={{current_user.get_id()}}/adoption_center/{{current_user.name}}"
     method="POST">
     <!-- Seccion 1 -->
     <div class="seccion1">
