--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'lateral_base.html' %}
 
-{% block title %}Mis animales{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block customCSS %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
