--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -49,7 +49,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="#" class="link flex">
+              <a href="/view/animals" class="link flex">
                 <i class="bx bxs-dog"></i>
                 <span>Mis animales</span>
               </a>
