--- a/src/templates/auth/login_user.html
+++ b/src/templates/auth/login_user.html
@@ -59,7 +59,7 @@
           <strong>Registrate aqui</strong>
       </h3>
       </a>
-      <h3>O puedes <a href="/home/adoption_center" class="href-personalized"><strong>Volver</strong></a></h3>
+      <h3>O puedes volver al  <a href="/home/adoption_center" class="href-personalized"><strong>inicio</strong></a></h3>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
