--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -93,7 +93,7 @@
         </div>
         <div class="contenedorTituloAlb">
           <a
-            href="#">{{publication.name_owner}}</a>
+            href="/view/profile={{publication.id_owner}}/adoption_center/{{publication.name_owner}}">{{publication.name_owner}}</a>
         </div>
       </div>
       <div class="cuerpoHistoria">
